--- a/Project-1/css/blog-post-one.css
+++ b/Project-1/css/blog-post-one.css
@@ -1,10 +1,17 @@
 @import url("style.css");
+@import url("greyBorder.css");
+@import url("writtenBy.css");
 
 body{
     margin: 0;
     position: relative;
     font-size: 62.5%;
 }
+
+.container .title {
+    color: black;
+}
+
 
 main {
     display: grid;
@@ -30,21 +37,26 @@ main {
     padding-left: 20px;
 }
 
+.aboutBox .avatar{
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 .archive, .elsewhere {
     padding-left: 20px;
 }
 
-.content .writtenBy {
-    color: grey;
-}
 
 .content p {
     line-height: 15px;
 }
 
-.content .greyBorder {
-    border: 1px solid grey;
+.subHeadingTwo h2+p {
+    text-decoration: underline;
 }
+
 
 .oldPost {
     background-color: white;
