--- a/Project-1/css/style.css
+++ b/Project-1/css/style.css
@@ -1,125 +1,105 @@
-body{
-    margin: 0;
-    font-size: 62.5%;
-
-    position: relative;
+body {
+	margin: 0;
+	font-size: 62.5%;
+	position: relative;
 }
-
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	border: 1px solid #e7e7e7;
+	background-color: #f3f3f3;
 }
-
 nav li {
-    float: left;
+	float: left;
 }
-
 nav li a {
-    display: block;
-    color: #666;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+	display: block;
+	color: #666;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
-
 nav li a:hover:not(.active) {
-    background-color: #ddd;
+	background-color: #ddd;
 }
 nav li a.active {
-    color: white;
-    background-color: #4CAF50;
+	color: white;
+	background-color: #4CAF50;
 }
-
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 15px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-top: 15px;
 }
-
-.container .flexItems{
-    margin: auto;
+.container .flexItems {
+	margin: auto;
 }
-
-.container .subscribe a{
-    color: grey;
+.container .subscribe a {
+	color: grey;
 }
-
-.container .title a{
-    text-decoration: underline;
-    color: black;
-    
+.container .title a {
+	text-decoration: underline;
+	color: black;
 }
-
 .container .material-icons {
-
-    align-self:center;
+	align-self: center;
 }
-
 main {
-    margin-top: 20px;
-    padding-bottom: 80px;
-    display: grid;
-    gap: 20px;
-
-    justify-content: center;
+	margin-top: 20px;
+	padding-bottom: 80px;
+	display: grid;
+	gap: 20px;
+	justify-content: center;
 }
-
 @media(min-width:900px) {
-    main {
-        margin-top: 20px;
-        padding-bottom: 80px;
-        display: grid;
-        gap: 20px;
-        grid-template-columns: 300px 300px;
-
-
-        justify-content: center;
-    }
+	main {
+		margin-top: 20px;
+		padding-bottom: 80px;
+		display: grid;
+		gap: 20px;
+		grid-template-columns: 300px 300px;
+		justify-content: center;
+	}
 }
 .card {
-    /* Add shadows to create the "card" effect */
-    width: 300px;
-    height: 500px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  /* Add some padding inside the card container */
-  .cardDetails {
-    padding: 2px 16px;
-  }
-
-  .card .cardDetails .blue {
-      color: blue;
-  }
-
-  .card .cardDetails .date {
-    color:grey;
+	/* Add shadows to create the "card" effect */
+	width: 300px;
+	height: 500px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	border-radius: 5px;
 }
+/* On mouse-over, add a deeper shadow */
 
-  /* Add rounded corners to the top left and the top right corner of the image */
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+/* Add some padding inside the card container */
+
+.cardDetails {
+	padding: 2px 16px;
+}
+.card .cardDetails .blue {
+	color: blue;
+}
+.card .cardDetails .date {
+	color: grey;
+}
+/* Add rounded corners to the top left and the top right corner of the image */
+
 .blogImg {
-    border-radius: 5px 5px 0 0;
-  }
-
-  .footer {
-      margin-top: 20px;
-  }
-  footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: lightgrey;
-    text-align: center;
-  }
+	border-radius: 5px 5px 0 0;
+}
+.footer {
+	margin-top: 20px;
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	background-color: lightgrey;
+	text-align: center;
+}
