--- a/Project-1/css/style.css
+++ b/Project-1/css/style.css
@@ -3,6 +3,10 @@ body {
 	font-size: 62.5%;
 	position: relative;
 }
+
+p, li, a {
+    font-size: 15px;
+}
 nav ul {
 	list-style-type: none;
 	margin: 0;
@@ -67,7 +71,7 @@ main {
 .card {
 	/* Add shadows to create the "card" effect */
 	width: 300px;
-	height: 500px;
+	height: 550px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
 	border-radius: 5px;
