--- a/Project-2/css/styles.css
+++ b/Project-2/css/styles.css
@@ -65,13 +65,19 @@ section {
 
 /* Navigation Styles*/
 .navbar__menu ul {
+
+    list-style-type: none;
     padding-left: 0;
     margin: 0;
-    text-align: right;
+    /* text-align: right; */
 }
 
 .navbar__menu li {
     display: inline-block;
+}
+
+.navbar__menu ul li a {
+    text-decoration: none;
 }
 
 .navbar__menu .menu__link {
