Implemented scroll feature

--- a/Project-2/css/styles.css
+++ b/Project-2/css/styles.css
@@ -78,6 +78,8 @@ section {
 
 .navbar__menu ul li a {
     text-decoration: none;
+    color: #000;
+    font-size: large;
 }
 
 .navbar__menu .menu__link {
