--- a/Project-2/css/styles.css
+++ b/Project-2/css/styles.css
@@ -96,6 +96,19 @@ section {
     transition: ease 0.3s all;
 }
 
+.navbar__menu .active__link {
+    background: #333;
+    color: #fff;
+    transition: ease 0.3s all;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .main__hero {
+        margin-top: 250px;
+    }
+
+}
 /* Header Styles */
 .page__header {
     background: #fff;
@@ -104,6 +117,8 @@ section {
     width: 100%;
     z-index: 5;
 }
+
+
 
 /* Footer Styles */
 .page__footer {
@@ -203,7 +218,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
-    background: rgb(0, 0, 0);
+    background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
