--- a/Project-2/css/styles.css
+++ b/Project-2/css/styles.css
@@ -83,7 +83,7 @@ section {
 }
 
 .navbar__menu .menu__link {
-    display: block;
+    display: inline;
     padding: 1em;
     font-weight: bold;
     text-decoration: none;
@@ -107,7 +107,6 @@ section {
     .main__hero {
         margin-top: 250px;
     }
-
 }
 /* Header Styles */
 .page__header {
