Tests no dey run, i don tire

--- a/Project4-EvaluateNewsNlp/src/client/styles/header.scss
+++ b/Project4-EvaluateNewsNlp/src/client/styles/header.scss
@@ -1,5 +1,10 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+    
+    padding: 5px;
+    text-align: center;
+
+    background-color: rgb(190, 86, 190);
+    color: white;
+
+    font-size: 30px;
 }
