--- a/Project4-EvaluateNewsNlp/src/client/styles/form.scss
+++ b/Project4-EvaluateNewsNlp/src/client/styles/form.scss
@@ -2,6 +2,9 @@ form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
+    width: 800px;
+    margin: 0 auto;
+    
 }
 
 input {
