--- a/Project4-EvaluateNewsNlp/src/client/views/index.html
+++ b/Project4-EvaluateNewsNlp/src/client/views/index.html
@@ -8,7 +8,7 @@
     <body>
 
         <header>
-            <h1>News Article NLP</h1>>
+            <h1>News Article NLP</h1>
         </header>
 
         <main>
@@ -32,7 +32,7 @@
                         Type in a statement, lets see what the API thinks of it:
                     </label>
                     <input id="textStatement" type="text" name="input" placeholder="Write a statement here...." required>
-                    <input id="submit" type="submit" value="Submit"/>
+                    <input id="submit" type="submit" value="Submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
 
