--- a/Project4-EvaluateNewsNlp/src/client/views/index.html
+++ b/Project4-EvaluateNewsNlp/src/client/views/index.html
@@ -63,5 +63,14 @@
             <p>Made with 😍 by &copy; <a href="www.github.com/AbdussamadYisau" target="_blank" rel="noopener"> Abdussamad Yisau</a></p>
         </footer>
 
+        <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
     </body>
 </html>
