Modified Service Worker a bit

--- a/Project4-EvaluateNewsNlp/src/client/views/index.html
+++ b/Project4-EvaluateNewsNlp/src/client/views/index.html
@@ -70,6 +70,8 @@
                 window.addEventListener('load', () => {
                     navigator.serviceWorker.register('/service-worker.js');
                 });
+            } else {
+                console.log("Service Working not supported");
             }
         </script>
     </body>
