Added form for url, not yet working perfectly. Wrote code for the test of that as well

--- a/Project4-EvaluateNewsNlp/src/client/views/index.html
+++ b/Project4-EvaluateNewsNlp/src/client/views/index.html
@@ -57,6 +57,45 @@
 
                 </ul>
             </section>
+
+            <hr>
+
+            <!-- <section>
+                <form class="" onsubmit="return Client.handleSubmitArticle(event)">
+                    
+                    <label>
+                        Enter a URL, lets see what the API thinks of it:
+                    </label>
+                    <input id="testURL" type="url" name="testURL" placeholder="Enter a URL here: https://...." required>
+                    <input id="submit" type="submit" value="Submit" onclick="return Client.handleSubmitArticle(event)" onsubmit="return Client.handleSubmitArticle(event)">
+                </form>
+            <section>
+
+            <section>
+                <strong>Text Results:</strong>
+                <ul id="results">
+                    <li>
+                        <h3>Text Polarity: </h3>
+                        <p id="urlPolarity"></p>
+
+                        <h3>Confidence:</h3>
+                        <p id="urlPolarityConfidence"></p>
+                    </li>
+
+                    <li>
+                        <h3>Text Subjectivity: </h3>
+                        <p id="urlSubjectivity"></p>
+
+                        <h3> Confidence: </h3>
+                        <p id="urlSubjectivityConfidence"></p>
+
+                        <h3>Text Excerpt </h3>
+                        <p id="excerpt"></p>
+                    </li>
+
+                </ul>
+            </section> -->
+
         </main>
 
         <footer>
